# boilerplate-fast-api

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.claude/skills/add-entity-tests/: README.md  template.md
migrations/: env.py
migrations/versions/: 2025_11_17_1151-25b760fbfd74_sample_user_entity.py
src/api_server/: deps.py  main.py  responses.py
src/api_server/helpers/: error_response.py  utils.py
src/api_server/routers/: user.py
src/config/: config.py  logging_config.py
src/constants/: __init__.py
src/data_services/: crud.py  filters.py  user_data_service.py
src/database/: db_engine.py
src/database/entities/: __init__.py  base.py  user.py
src/database/scripts/: create_db.sql
src/mappers/: user.py
src/models/: base.py  error_result.py  problem_details.py  user.py
src/models/enums/: error_status.py  sort_direction.py
src/services/: base_service.py  user_service.py
src/tests/: conftest.py  utils.py
src/tests/fixtures/: user_fixtures.py
src/tests/unit/data_services/: test_crud.py
src/tests/unit/routers/: test_user.py
src/tests/unit/services/: test_base_service.py  test_user_service.py
src/utils/: exceptions.py
