[tool.poetry]
name = "boilerplate-fast-api"
version = "0.1.0"
description = "Boilerplate FastAPI application with SQLAlchemy"
authors = ["Jakub Przybylo <jkb.przybylo@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.120.1"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.10.4"
sqlalchemy = {extras = ["mypy"], version = "^2.0.36"}
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
greenlet = "^3.0.0"
result = "^0.17.0"
httpx = "^0.28.1"
pydantic-settings = "^2.11.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
requests = "^2.32.3"
isort = "^5.13.2"
mypy = "^1.13.0"
pytest-mock = "^3.14.0"
types-requests = "^2.32.0.20241016"
types-psycopg2 = "^2.9.21.20251012"
aiosqlite = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
skip_glob = ["migrations", "**/__init__.py"]
line_length = 119
skip_gitignore = true
known_first_party = ["src", "integration"]
force_sort_within_sections = true

[tool.flake8]
# E266 - too many leading '#' for block comment
# W503 - line break before binary operator
# E712 - https://www.flake8rules.com/rules/E712.html
# E731 - https://www.flake8rules.com/rules/E731.html
ignore = ["E266", "W503", "E712", "E731", "E231"]
exclude =[
    "venv",
    "*.txt",
]
max-line-length = 119
# McCabe complexity threshold
max-complexity = 18
# select errors and warnings to enable which are off by default
select = ["B", "C", "E", "F", "W", "T4", "B9"]

[tool.mypy]
python_version = "3.12"
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
strict = true
show_error_codes = true
